added work done and code changed

--- a/p1/ReadMe
+++ b/p1/ReadMe
@@ -5,4 +5,4 @@ Our code can be run with the following command:
 ```
 python3 2021400015.py
 ```
-When program started, it calculates the best and worst cases for each size of an array. So it is normal if the script does not print anything in the first 30 seconds of the execution. Then it runs the algorithm for each size of an array and prints the results to the console.
+When program started, it calculates the best and worst cases for each size of an array. Then it runs the algorithm for each size of an array and prints the results to the console.
